# invenio-campusonline

./: .editorconfig  .git-blame-ignore-revs  .ruff.toml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.md  README.rst  babel.ini  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_campusonline/: __init__.py  api.py  cli.py  config.py  convert.py  ext.py  jobs.py  proxies.py  tasks.py  types.py  utils.py  version.py
invenio_campusonline/records/: __init__.py  api.py  config.py  models.py
invenio_campusonline/services/: __init__.py  config.py  decorators.py  services.py
tests/: conftest.py  minimal_record.xml  test_invenio_campusonline.py  test_utils.py
