# -*- coding: utf-8 -*-
#
# Copyright (C) 2021-2022 Graz University of Technology.
#
# invenio-campusonline is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.

[metadata]
name = invenio-campusonline/
version = attr: invenio_campusonline/.__version__
description = "This module is used to import/export from/to the CampusOnline System."
long_description = file: README.rst, CHANGES.rst
keywords = invenio TODO
license = MIT
author = Graz University of Technology
author_email = info@tugraz.at
platforms = any
url = https://github.com/tu-graz-library/invenio-campusonline
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    invenio-i18n>=1.2.0

[options.extras_require]
tests =
    pytest-black>=0.3.0,<0.3.10
    pytest-invenio>=1.4.0
    sphinx>=4.5
# Kept for backwards compatibility
docs =

[options.entry_points]
invenio_base.apps =
    invenio_campusonline = invenio_campusonline:InvenioCampusonline
invenio_i18n.translations =
    messages = invenio_campusonline

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[compile_catalog]
directory = invenio_campusonline/translations/

[extract_messages]
copyright_holder = Graz University of Technology
msgid_bugs_address = info@tugraz.at
mapping-file = babel.ini
output-file = invenio_campusonline/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_campusonline/translations/messages.pot
output-dir = invenio_campusonline/translations/

[update_catalog]
input-file = invenio_campusonline/translations/messages.pot
output-dir = invenio_campusonline/translations/

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_campusonline --cov-report=term-missing
testpaths = docs tests invenio_campusonline
