# -*- coding: utf-8 -*-
#
# Copyright (C) 2021-2024 Graz University of Technology.
#
# invenio-campusonline is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.

[metadata]
name = invenio-campusonline
version = attr: invenio_campusonline.__version__
description = "The module is used to import/export from/to the CampusOnline System."
long_description = file: README.rst, CHANGES.rst
keywords = invenio TODO
license = MIT
author = Graz University of Technology
author_email = info@tugraz.at
platforms = any
url = https://github.com/tu-graz-library/invenio-campusonline
classifiers =
    Programming Language :: Python :: 3.12
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.12
zip_safe = False
install_requires =
    click>=8.0.0
    click-params>=0.4.0
    invenio-access>=2.0.0
    invenio-accounts>=3.0.0
    invenio-celery>=1.2.5
    requests>=2.0.0

[options.extras_require]
tests =
    pytest-black-ng>=0.4.0
    pytest-invenio>=1.4.0
    ruff>=0.2.1
    sphinx>=4.5

[options.entry_points]
flask.commands =
    campusonline = invenio_campusonline.cli:campusonline
invenio_base.apps =
    invenio_campusonline = invenio_campusonline:InvenioCampusonline
invenio_celery.tasks =
    invenio_campusonline = invenio_campusonline.tasks

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[isort]
profile=black

[check-manifest]
ignore = *-requirements.txt

[tool:pytest]
addopts = --black --cov=invenio_campusonline --cov-report=term-missing
testpaths = docs tests invenio_campusonline
